# zed-file-mention

./: .gitignore  AGENTS.md  Cargo.toml  README.md  extension.toml
docs/development/: architecture.md  configuration.md  indexing.md  lsp-design.md  packaging.md  testing.md
server/: Cargo.toml
server/src/: completion.rs  config.rs  main.rs  server.rs
server/src/index/: mod.rs  scanner.rs  scoring.rs  watcher.rs
src/: lib.rs
